# tokenol

./: .claudesignore  .gitignore  CHANGELOG.md  PHASE2_PLAN.md  PHASE3_PLAN.md  PROBE_PLAN.md  README.md  REPO_PLAN.md  VALIDATION.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ASSUMPTIONS.md  DASHBOARD.md  METRICS.md
docs/superpowers/plans/: 2026-04-24-breakdown-pr1.md  2026-04-24-breakdown-pr2.md  2026-04-24-breakdown-pr3.md  2026-05-02-persistent-history-pr1.md  2026-05-03-cold-start-bench.md  2026-05-03-opt-in-persistence.md  2026-05-15-cost-visibility.md  2026-05-15-per-tool-cost.md  2026-05-16-attribution-mode-toggle.md
docs/superpowers/specs/: 2026-04-24-breakdown-tab-design.md  2026-05-02-persistent-history-design.md  2026-05-03-cold-start-bench-design.md  2026-05-03-opt-in-persistence-design.md  2026-05-15-cost-visibility-design.md  (+3 more)
src/tokenol/: __init__.py  assumptions.py  cli.py  enums.py
tests/: conftest.py  test_cli.py  test_context_metrics.py  test_dedup.py  test_history_and_thresholds.py  test_ingest_discovery.py  test_metrics.py  test_parser.py  test_patterns.py  test_per_tool_cost.py  test_persistence_flusher.py  test_persistence_forget_handoff.py  test_persistence_store.py  test_serve_app.py  test_serve_app_no_persist.py  test_serve_archived_session.py  test_serve_prefs.py  test_serve_state.py  test_serve_streaming.py  test_session_detail.py  test_skills.py  test_verdicts.py  test_windows.py
tests/fixtures/: basic.jsonl  dedup.jsonl  gemini.jsonl  interrupted.jsonl  missing_ids.jsonl  multi.jsonl  per_tool_basic.jsonl  sidechain.jsonl  skills.jsonl
(+46 files in other folders)
