[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tokenol"
version = "0.1.0.dev0"
description = "Audit Claude Code JSONL session logs: track cost, cache health, context blow-ups, and 5h-window pressure."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["claude", "anthropic", "tokens", "cost", "audit", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "duckdb>=0.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.4",
    "hypothesis>=6",
]
serve = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "watchfiles>=0.21",
]

[project.scripts]
tokenol = "tokenol.cli:app"

[project.urls]
Homepage = "https://github.com/farhanferoz/tokenol"
Issues = "https://github.com/farhanferoz/tokenol/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/tokenol"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
